feat: implemented books API
