# src/dtos/books.dto.ts
@@ -1,0 +1,19 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class CreateBookDto {
+  @IsString()
+  @IsNotEmpty()
+  public title: string;
+
+  @IsString()
+  @IsNotEmpty()
+  public isbn: string;
+
+  @IsString()
+  @IsNotEmpty()
+  public category: string;
+
+  @IsString()
+  @IsNotEmpty()
+  public year: string;
+}
